test/compile_errors/err_derive_builder_build_field.w
//! expect-error: derive Builder cannot generate a setter for field 'build'

@[derive(Builder)]
type BadBuilder { build: i32 }

fn main:
    let _ = BadBuilder.builder()
